# advent-of-code

./: .gitattributes  .gitignore  README.md  mise.toml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
day02/src/: main.rs
day04/src/: main.rs
day05/: main.py
day06/: main.py
day07/: main.py
day1/: Main.scala
day11/: Main.scala  main.py
day12/: Main.scala
day14/: main.py
day15/: main.py
day16/: Main.scala  main.py
day17/: main.py
day18/: main.py
day2/: Main.scala
day20/: Main.scala  main.py
day21/: main.py
day23/: Main.scala  main.py
day25/: main.py
day3/: Main.scala
day3/src/: main.rs
day4/: Main.scala
day5/: Main.scala
day8/: Main.scala  main.py
year2015/day07/: __main__.py
year2020/day10/: Main.scala
year2020/day13/: Main.scala
year2020/day14/: Main.scala
year2020/day6/: Main.scala
year2020/day7/: Main.scala
year2020/day9/: Main.scala
year2021/day05/: __init__.py
year2021/day06/: __init__.py
year2021/day07/: __init__.py
year2021/day08/: __init__.py
year2021/day09/: __init__.py  main.py
year2021/day10/: __init__.py  main.py
year2021/day11/: __init__.py
year2021/day12/: __init__.py  main.py
year2021/day13/: __init__.py  main.py
year2021/day14/: __init__.py
year2021/day15/: __init__.py
year2021/day16/: __init__.py
year2021/day17/: __init__.py
year2021/day18/: __init__.py
year2021/day19/: __init__.py  main.py
year2021/day20/: __init__.py
year2021/day21/: __init__.py
year2021/day22/: __init__.py  main.py
year2021/day23/: __init__.py
year2021/day24/: __init__.py  main.py
year2021/day25/: __init__.py
year2022/: template.py  template.py.txt  utils.py
year2022/day01/: __main__.py  main.py
year2022/day02/: __init__.py  __main__.py  main.py
year2022/day03/: __init__.py  __main__.py  main.py
year2022/day04/: __init__.py  __main__.py  main.py
year2022/day05/: __main__.py  main.py
year2022/day06/: __init__.py  __main__.py  main.py
year2022/day07/: __main__.py  main.py
year2022/day08/: __init__.py  __main__.py  main.py
year2022/day09/: __init__.py  __main__.py  main.py
year2022/day10/: __main__.py
year2022/day11/: __main__.py
year2022/day12/: __main__.py
year2022/day13/: __main__.py
year2022/day14/: __main__.py
year2022/day15/: __main__.py
year2022/day16/: __main__.py
year2022/day17/: __main__.py
year2022/day18/: __main__.py
year2022/day19/: __main__.py
year2022/day20/: __main__.py
year2022/day21/: __main__.py
year2022/day22/: __main__.py
year2022/day23/: __main__.py
year2022/utils/: __init__.py  _funs.py  _grid.py  _parse.py
year2023/: template.py.txt
year2023/day01/: __main__.py
year2023/day02/: __main__.py
year2023/day03/: __init__.py  __main__.py
year2023/day04/: __init__.py
year2023/day08/: __init__.py
year2023/day09/: __init__.py
year2023/day10/: __init__.py
year2023/day15/: __init__.py
year2023/day16/: __init__.py
year2023/day17/: __init__.py
year2023/day18/: __init__.py
year2023/utils/: __init__.py  _funs.py  _grid.py  _parse.py  _run.py
year2024/day01/: __init__.py
year2024/day02/: __init__.py
year2024/day03/: __init__.py
year2024/day04/: __init__.py
year2024/day05/: __init__.py
year2024/day06/: __init__.py
year2024/day07/: __init__.py
year2024/day08/: __init__.py
year2024/day10/: __init__.py  __main__.py  input
year2024/day11/: __init__.py
year2024/day12/: __init__.py
year2024/day13/: __init__.py
year2024/day14/: __init__.py  input
year2024/day15/: __init__.py
year2024/day16/: __init__.py
year2024/day18/: __init__.py  input
(+27 files in other folders)
