[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [{ name = "Waleed Khan", email = "me@waleedkhan.name" }]
dependencies = [
    # Linting.
    "ruff>=0.8.1",
    "mypy-extensions>=1.0.0",
    "mypy>=1.13.0",
    # Testing.
    "hypothesis>=6.122.0",
    "pytest>=8.3.3",
    "pytest-watcher>=0.4.3",
    # Libraries.
    "z3-solver>=4.13.3.0",
    "setuptools>=75.6.0",  # For Z3, as it imports `pkg_resources` for some reason.
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
ci = { composite = [
    "pytest",
    "mypy .",
    "ruff format --check .",
    "ruff check .",
] }

[tool.pytest.ini_options]
addopts = "--doctest-modules"
python_files = "*.py"
filterwarnings = "ignore:pkg_resources is deprecated as an API."

[tool.ruff]
extend-exclude = ["template"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]
ignore = ["E203", "E501", "E741", "F403", "F405"]

[tool.setuptools]
packages = ["year2020", "year2021", "year2022", "year2023", "year2024"]
